fixed issue with overlapping

--- a/src/containers/HomePage.css
+++ b/src/containers/HomePage.css
@@ -12,7 +12,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
-  background: #222222;
+  background: var(--dark-color);
   color: #999999;
 }
 
@@ -73,6 +73,9 @@ img {
   align-items: center;
   text-align: center;
   z-index: 2;
+  background: url("https://www.jpl.nasa.gov/images/nustar/20190904/PIA23401-16.jpg")
+    no-repeat center center/cover;
+  box-shadow: inset 120px 100px 250px #000000, inset -120px -100px 250px #000000;
 }
 
 .showcase-content h1 {
@@ -94,11 +97,13 @@ img {
 /* Main Container */
 
 .container {
+  box-shadow: inset 0 15px 20px -5px #000000;
   flex: 1;
   padding: 1em;
   align-items: center;
   justify-content: center;
   text-align: center;
+  background-color: #141414;
 }
 
 .container > div {
